package com.amoureflare.enums;

/**
 * Состояния игры
 */
public enum GameStatus {
    NOT_STARTED,
    CONTINUING,
    WISHER_WON,
    GUESSER_WON
}
