package com.amoureflare.enums;

/**
 * Состояния отрисовки висельника - последняя часть тела, которая была отрисована
 */
public enum HangmanStatus {
    EMPTY,
    HEAD,
    BODY,
    LEFT_HAND,
    RIGHT_HAND,
    LEFT_LEG,
    RIGHT_LEG
}
